--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/inter": "^5.2.5",
     "@fontsource/sora": "^5.2.5",
+    "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "firebase": "^11.7.1",
     "framer-motion": "^12.11.2",
