--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@fontsource/sora": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "axios": "^1.9.0",
     "firebase": "^11.7.1",
     "framer-motion": "^12.11.2",
     "next": "15.3.2",
+    "openai": "^4.98.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "replicate": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
