--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/sora": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
     "firebase": "^11.7.1",
     "framer-motion": "^12.11.2",
@@ -22,7 +23,8 @@
     "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "replicate": "^1.0.1"
+    "replicate": "^1.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
