--- a/package.json
+++ b/package.json
@@ -91,12 +91,14 @@
     "@types/nodemailer": "^6.4.17",
     "@types/nprogress": "^0.2.3",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.3",
     "@types/uuid": "^10.0.0",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
