--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/papaparse": "^5.3.15",
     "@types/react-csv": "^1.1.10",
     "@types/react-dropzone": "^4.2.2",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-window": "^1.8.8",
     "@types/recharts": "^1.8.29",
     "@types/stripe": "^8.0.416",
     "@types/xlsx": "^0.0.35",
@@ -75,6 +77,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-minimal-pie-chart": "^9.1.0",
     "react-router-dom": "^7.5.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "stripe": "^18.0.0",
