--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@tabler/icons-react": "^3.31.0",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
     "next-seo": "^6.6.0",
