--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "menuqr",
+  "name": "axel-dev",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,9 +13,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
-    "@mui/material-nextjs": "^7.1.0",
-    "framer-motion": "^12.12.2",
+    "@tabler/icons-react": "^3.31.0",
+    "framer-motion": "^12.12.1",
     "next": "15.3.2",
+    "next-seo": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -25,9 +26,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "postcss-nested": "^7.0.2",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5"
   }
 }
