--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@tabler/icons-react": "^3.31.0",
+    "critters": "^0.0.23",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
     "next-seo": "^6.6.0",
