--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axel-dev",
+  "name": "menuqr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,30 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
-    "@tabler/icons-react": "^3.31.0",
-    "critters": "^0.0.23",
-    "framer-motion": "^12.12.1",
-    "next": "15.3.2",
-    "next-seo": "^6.6.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "framer-motion": "^10.16.16",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "next": "15.3.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "postcss": "^8.5.3",
-    "postcss-nested": "^7.0.2",
-    "tailwindcss": "^4.1.7",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3"
   }
 }
