--- a/.env
+++ b/.env
@@ -1,25 +1,24 @@
 APP_NAME="Sistema Contable Frutería"
-APP_ENV=production
-APP_KEY=
-APP_DEBUG=false
-APP_URL=https://tu-dominio.com
-
+APP_ENV=local
+APP_KEY=base64:aeQTwqGdQoPr8ebr43Gxvh7U5bbnda0sJ+Qczyr2rDI=
+APP_DEBUG=true
+APP_URL=http://localhost:8000
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=error
+LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sistema_fruteria
-DB_USERNAME=tu_usuario
-DB_PASSWORD=tu_password
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=redis
-SESSION_DRIVER=redis
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
