Checkpoint after AI response (Message ID: d1ff77c6-3a70-44c4-8bf8-cf17a7147f79)

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sistema_fruteria
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=fruteria_user
+DB_PASSWORD=password_seguro
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
