Checkpoint after AI response (Message ID: 6c3b218e-1b1e-4a00-b556-26a1908cb2b8)

--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "framer-motion": "^10.16.16",
+    "next": "15.3.2",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
