--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,8 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
+.pnp.js
+.yarn/install-state.gz
 # testing
 /coverage
 
@@ -28,14 +23,20 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
+# local env files
+.env*.local
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Database files (development)
+/data/*.db
+/data/*.db-shm
+/data/*.db-wal
+
+# Keep the data directory but ignore database files
+!/data/.gitkeep
