Checkpoint after AI response (Message ID: 5dab8be4-17e9-439d-af97-60fe2dc1e256)

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "mkdir -p data && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prebuild": "mkdir -p data",
     "postinstall": "mkdir -p data"
   },
   "dependencies": {
