--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "better-sqlite3": "^9.2.2",
+    "@types/better-sqlite3": "^7.6.8"
   }
 }
