--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-menu-data": "node scripts/generate-menu-data.js"
+    "generate-menu-data": "node scripts/generate-menu-data.js",
+    "generate-vercel-env": "node scripts/generate-vercel-env.js",
+    "deploy-prep": "npm run generate-vercel-env && echo '✅ Listo para deployment! Revisa data/vercel-env.txt'"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
