--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,22 @@
     "src/app/api/**/*.ts": {
       "maxDuration": 10
     }
-  }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=60, stale-while-revalidate=300"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/menu/:id",
+      "destination": "/menu?id=:id"
+    }
+  ]
 }
