--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,29 @@
-# Configuración de Base de Datos MySQL
+# Configuración de Base de Datos MySQL para Vercel
 DATABASE_TYPE=mysql
-MYSQL_HOST=localhost
+
+# Para PlanetScale (recomendado para Vercel)
+MYSQL_HOST=aws.connect.psdb.cloud
 MYSQL_PORT=3306
-MYSQL_USER=root
+MYSQL_USER=tu_usuario
 MYSQL_PASSWORD=tu_password
 MYSQL_DATABASE=menuqr
-# Admin Authentication (cambiar en producción)
-ADMIN_PASSWORD=admin123
+MYSQL_SSL=true
 
-# Para producción sin MySQL, usar datos estáticos
-# DATABASE_TYPE=static
+# Para Railway MySQL
+# MYSQL_HOST=containers-us-west-xxx.railway.app
+# MYSQL_PORT=6543
+# MYSQL_USER=root
+# MYSQL_PASSWORD=tu_password
+# MYSQL_DATABASE=railway
+# MYSQL_SSL=false
+
+# Para Aiven MySQL
+# MYSQL_HOST=mysql-xxx.aivencloud.com
+# MYSQL_PORT=12345
+# MYSQL_USER=avnadmin
+# MYSQL_PASSWORD=tu_password
+# MYSQL_DATABASE=defaultdb
+# MYSQL_SSL=true
+
+# Admin Authentication
+ADMIN_PASSWORD=admin123
