--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "firebase": "^11.8.1",
     "framer-motion": "^10.16.16",
     "mysql2": "^3.14.1",
     "next": "15.3.2",
