--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,13 @@
-# Configuración de Base de Datos MySQL para Vercel
-DATABASE_TYPE=mysql
+# Firebase Configuration
+NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789
+NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789:web:abcdef123456
 
-# Para PlanetScale (recomendado para Vercel)
-MYSQL_HOST=aws.connect.psdb.cloud
-MYSQL_PORT=3306
-MYSQL_USER=tu_usuario
-MYSQL_PASSWORD=tu_password
-MYSQL_DATABASE=menuqr
-MYSQL_SSL=true
+# Optional: Use Firebase Emulator for development
+NEXT_PUBLIC_USE_FIREBASE_EMULATOR=false
 
-# Para Railway MySQL
-# MYSQL_HOST=containers-us-west-xxx.railway.app
-# MYSQL_PORT=6543
-# MYSQL_USER=root
-# MYSQL_PASSWORD=tu_password
-# MYSQL_DATABASE=railway
-# MYSQL_SSL=false
-
-# Para Aiven MySQL
-# MYSQL_HOST=mysql-xxx.aivencloud.com
-# MYSQL_PORT=12345
-# MYSQL_USER=avnadmin
-# MYSQL_PASSWORD=tu_password
-# MYSQL_DATABASE=defaultdb
-# MYSQL_SSL=true
-
-# Admin Authentication
-ADMIN_PASSWORD=admin123
+# Database Type (force Firebase)
+DATABASE_TYPE=firebase
