--- a/package.json
+++ b/package.json
@@ -7,18 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-menu-data": "node scripts/generate-menu-data.js",
-    "generate-vercel-env": "node scripts/generate-vercel-env.js",
-    "deploy-prep": "npm run generate-vercel-env && echo '✅ Listo para deployment! Revisa data/vercel-env.txt'"
+    "generate-menu-data": "node scripts/generate-menu-data.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
-    "firebase": "^11.8.1",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
-    "mysql2": "^3.14.1",
     "next": "15.3.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -26,7 +23,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/mysql": "^2.15.27",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
