--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "setup-firebase": "node scripts/setup-firebase.js",
     "generate-menu-data": "node scripts/generate-menu-data.js"
   },
   "dependencies": {
