--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/plus-jakarta-sans": "^5.2.5",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "firebase": "^10.7.1",
