Checkpoint after AI response (Message ID: e3444c6d-d1f4-4da0-a6ca-755c5ee26721)

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Firebase Configuration
-NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyB-uj0wH6FjNCYn5gUeLk9U5N98k_bHVSg",
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="corredor-47215.firebaseapp.com",
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="corredor-47215",
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="corredor-47215.firebasestorage.app",
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="829858619151",
+NEXT_PUBLIC_FIREBASE_APP_ID="1:829858619151:web:5911389c57330d4f59e87a",
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-00C28PCHHT"
 
 # Admin Configuration
 ADMIN_PASSWORD=admin123
