Checkpoint after AI response (Message ID: 61b8150f-dc92-419f-b140-418432f050ad)

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Firebase Configuration
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyB-uj0wH6FjNCYn5gUeLk9U5N98k_bHVSg",
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="corredor-47215.firebaseapp.com",
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="corredor-47215",
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="corredor-47215.firebasestorage.app",
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="829858619151",
-NEXT_PUBLIC_FIREBASE_APP_ID="1:829858619151:web:5911389c57330d4f59e87a",
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-00C28PCHHT"
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyDN3WM6f_cILXKipKu2O7bhLCybNeAO45Y",
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="xs-reset.firebaseapp.com",
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="xs-reset",
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="xs-reset.firebasestorage.app",
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="294241885633",
+NEXT_PUBLIC_FIREBASE_APP_ID="1:294241885633:web:c997c43bc3f0c75c99a340",
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-GEM1ZRQ7QP"
 
 # Admin Configuration
 ADMIN_PASSWORD=admin123
