--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@types/qrcode": "^1.5.5",
     "firebase": "^11.8.1",
     "framer-motion": "^10.16.16",
     "next": "15.3.2",
