--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@mui/x-charts": "^6.19.8",
+    "@mui/x-date-pickers": "^8.5.0",
+    "@mui/x-date-pickers-pro": "^8.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
