--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint",
     "init-system": "tsx scripts/init-system.ts",
     "verify-env": "node verify-env.js",
-    "type-check": "tsc --noEmit",
-    "db:types": "supabase gen types typescript --project-id koesipeybsasrknvgntg > src/lib/supabase/types.ts"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -24,11 +23,12 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/supabase-js": "^2.49.9",
+    "@supabase/supabase-js": "^2.38.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
