--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "resend": "^4.5.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
