--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "db:generate-types": "supabase gen types typescript --project-id koesipeybsasrknvgntg > src/types/database.types.ts",
-    "db:seed": "npx ts-node scripts/seed-database.ts",
-    "verify-system": "npx ts-node scripts/verify-system.ts",
+    "db:seed": "ts-node --project tsconfig.node.json scripts/seed-database.ts",
+    "verify-system": "ts-node --project tsconfig.node.json scripts/verify-system.ts",
     "setup": "chmod +x scripts/setup-project.sh && ./scripts/setup-project.sh",
     "build:analyze": "ANALYZE=true npm run build",
     "postinstall": "npm run db:generate-types || true"
@@ -26,7 +26,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -45,14 +45,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "resend": "^4.5.1",
+    "resend": "^2.1.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.17.57",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
@@ -60,6 +60,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
