Checkpoint after AI response (Message ID: 9effed83-6928-4f8b-8d40-10c8a3b9aab0)

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,22 @@
+# Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# Payment Gateway (GetNet/MercadoPago)
+GETNET_CLIENT_ID=
+GETNET_CLIENT_SECRET=
+MERCADOPAGO_ACCESS_TOKEN=
+
+# App Configuration
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_NAME="Casino Escolar"
+
+# Email Configuration (opcional)
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+
+# Analytics (opcional)
+NEXT_PUBLIC_GA_ID=
