--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,7 @@ yarn-error.log*
 # env files
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # Netlify
 .netlify
