Checkpoint after AI response (Message ID: 7a92b860-ac4b-4d3d-9a3d-cc4314535c11)

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "postcss": "^8.5.4",
     "supabase": "^2.22.12",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.4",
     "typescript": "^5"
   }
 }
