--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "firebase": "^10.13.2",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
